<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demo1</string>
    <string name="action_settings">Settings</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="send">Send</string>
    <string name="ime">Name</string>
    <string name="prezime">Surname</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="adresa">Enter Address</string>
    <string name="_adresa">Address</string>

</resources>
