<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_second_ime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/ime"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00F3FF" />

    <TextView
        android:id="@+id/tv_second_prezime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/prezime"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00F3FF" />

    <TextView
        android:id="@+id/tv_second_adresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/_adresa"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00F3FF" />

</LinearLayout>